<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="add_coupon">"  添加  "</string>
    <string name="add_flash">开灯</string>
    <string name="adding_shop_cart">正在添加到购物车</string>
    <string name="address_consignee_laber">收货人：%1$s</string>
    <string name="address_detail_laber">收货地址：%1$s</string>
    <string name="app_name">多点</string>
    <string name="back_soon">稍后再来</string>
    <string name="card_bag_empty_button_title" />
    <string name="card_bag_empty_subtitle">可以在去物美店面消费时，出示美通卡给收银员，收银员来绑定美通卡。</string>
    <string name="card_bag_empty_title">无可用美通卡哦</string>
    <string name="cart_collect_success">收藏成功</string>
    <string name="cart_delete_cancel">取消</string>
    <string name="cart_delete_confirm">确定删除么?</string>
    <string name="cart_delete_sure">确定</string>
    <string name="cart_manage_add_collect">加入收藏夹</string>
    <string name="cart_manage_begin">管理</string>
    <string name="cart_manage_complete">完成</string>
    <string name="cart_manage_delete">删除</string>
    <string name="cart_manage_no_ware_selected">未选择商品</string>
    <string name="cart_manage_no_ware_valid">无有效商品</string>
    <string name="cart_price_format">￥%1$s</string>
    <string name="cart_request_error_tip">失败，网络异常请稍后再试</string>
    <string name="cart_select_all">全选</string>
    <string name="coupon_avaliable_label">可用( %1$d )</string>
    <string name="coupon_code_amount_format">-￥%1$s</string>
    <string name="coupon_code_input_empty_tip">请输入优惠码信息</string>
    <string name="coupon_code_input_invalid_hint">优惠券与优惠码不能同时使用</string>
    <string name="coupon_code_input_valid_hint">请输入优惠码</string>
    <string name="coupon_code_tip">优惠券与优惠码不能同时使用</string>
    <string name="coupon_code_title">优惠券/优惠码</string>
    <string name="coupon_count">%1$d张</string>
    <string name="coupon_guide">使用说明</string>
    <string name="coupon_inavaliable_label">不可用( %1$d )</string>
    <string name="coupon_invalid_tip">请先取消优惠码</string>
    <string name="coupon_label_goon">再去逛逛</string>
    <string name="coupon_label_lijian">立减券</string>
    <string name="coupon_label_manjian">满减券</string>
    <string name="coupon_label_unused">未使用</string>
    <string name="coupon_manual">您的优惠券金额大于商品应付总额，优惠券差额不予退还哦~</string>
    <string name="coupon_title">我的优惠券</string>
    <string name="coupon_valiable_time">"有效期   %1$s ~ %2$s"</string>
    <string name="default_maintenace_info">为了为您提供更好的服务，多点正在进行系统升级，升级期间相关服务暂停使用，为您带来的不便敬请谅解</string>
    <string name="deli_addr_pickup">"超出配送范围!
请选择自提或更换收货地址"</string>
    <string name="dialog_left_btn">退出</string>
    <string name="dialog_left_btn1">以后再说</string>
    <string name="dialog_right_btn">立即更新</string>
    <string name="dialog_titlec_tv">本版本更新特点</string>
    <string name="dialog_upversion">版本更新</string>
    <string name="dmall_tips">多点温馨提示</string>
    <string name="edit_barcode">手动输入</string>
    <string name="edit_barcode_notfound">无法识别该商品条形码</string>
    <string name="exchange_coupon_fail">"出错了
无法识别该优惠券码"</string>
    <string name="exchange_coupon_success">成功兑换优惠券!稍后发放至您的账户中,请耐心等待</string>
    <string name="freight_tips">运费规则</string>
    <string name="get_identify_code_again">"&lt;font color='#999999'>重新获取&lt;/font>"</string>
    <string name="get_identify_code_count">"&lt;font color='#333333'>(%1$ss)&lt;/font>&lt;font color='#999999'>重新获取&lt;/font>"</string>
    <string name="hello_world">Hello world!</string>
    <string name="i_known">我知道了</string>
    <string name="in_sys_maintenance">多点正在维护</string>
    <string name="input_old_pay_password">请输入旧的支付密码</string>
    <string name="invoice_no">不开发票</string>
    <string name="invoice_no_support">商家不支持开发票</string>
    <string name="invoice_title_pop">发票须知</string>
    <string name="invoice_title_pop_btn">我知道了</string>
    <string name="invoice_wheel_cancel">取 消</string>
    <string name="invoice_wheel_sure">确 定</string>
    <string name="load_again">重新加载</string>
    <string name="loc_fail">暂无法定位您的位置，请手动选择门店</string>
    <string name="logo_text_exp">超出服务范围</string>
    <string name="logo_text_self">仅自提</string>
    <string name="logo_text_shop">仅配送</string>
    <string name="more_scan_store">切换门店</string>
    <string name="more_smartgo_help">使用帮助</string>
    <string name="net_share_erro">网络有点慢，请稍后重试</string>
    <string name="net_work_error">网络出错了！</string>
    <string name="net_work_error_set">请检查网络后重试</string>
    <string name="net_work_try">加载失败，点击重试</string>
    <string name="no_install_QQ">您还没有安装qq，无法进行分享</string>
    <string name="no_install_WB">您还没有安装微博，无法进行分享</string>
    <string name="no_install_WX">您还没有安装微信，无法进行分享</string>
    <string name="no_install_WX_old">您的微信版本过低，无法进行分享</string>
    <string name="no_more_ware">没有更多此商品</string>
    <string name="ok">"确  定"</string>
    <string name="order_canceling">取消中</string>
    <string name="order_canceling_submit">努力为您取消中</string>
    <string name="order_confirm_coupon_label">优惠券</string>
    <string name="order_confirm_coupon_number">%1$d张可用</string>
    <string name="order_detail_coupon_label">优惠券</string>
    <string name="order_detail_to_new_store">请在首页切换到%1$s，再查看商品详情</string>
    <string name="order_finish_pay">支付完成</string>
    <string name="order_sure_back_cancel">我再想想</string>
    <string name="order_sure_back_ok">去意已决</string>
    <string name="order_sure_back_tips">再想想吧，稍后就送到了</string>
    <string name="other_set_sharetv">分享app</string>
    <string name="other_store_ware_tip_format">请在首页切换到%1$s,再查看商品详情</string>
    <string name="pay_balance_info_format">(可用余额:￥%1$s)</string>
    <string name="pay_pwd_error_format">支付密码错误，您还可以输入%1$d次</string>
    <string name="pay_pwd_error_too_many">"抱歉，支付密码已被锁定
建议找回密码或明天再来试试"</string>
    <string name="pay_pwd_order_confirm_invalid">支付密码输入次数过多，暂时无法使用余额支付</string>
    <string name="pay_pwd_order_pay_invalid">支付密码输入次数过多，请选择其他支付方式</string>
    <string name="pay_time_limit_format">请在下单后%1$d分钟内完成订单操作，否则订单将失效</string>
    <string name="promotion_gather_order">去凑单</string>
    <string name="promotion_join_activity">立即参加</string>
    <string name="promotion_satisfy_format">已优惠%1$s元</string>
    <string name="reset_password_title_first">请输入新的多点支付密码</string>
    <string name="reset_password_title_second">请再次输入新的多点支付密码</string>
    <string name="scan_barcode_failed">无法获得该条码信息，请重新扫描条形码！</string>
    <string name="scan_barcode_promotion">线下扫码</string>
    <string name="scan_coupon">优惠券</string>
    <string name="scan_coupon_manualinput">手动输入</string>
    <string name="scan_coupon_title">添加优惠券</string>
    <string name="scan_smartgo">扫码购</string>
    <string name="service_phone">1010-0818</string>
    <string name="set_password_tip">"请输入&lt;font color='#ff6161'>登录密码&lt;/font>，完成身份验证"</string>
    <string name="settlement_price_format">合计:￥%1$s</string>
    <string name="settlement_promotion_format">总额:￥%1$s 优惠:￥%2$s</string>
    <string name="settlement_settle_format">结算(%1$d)</string>
    <string name="setup_password_login_password_same">支付密码与登录密码不能一致</string>
    <string name="setup_password_simple">密码过于简单，容易被他人获取；建议勿与登录密码相同。</string>
    <string name="setup_password_title_first">请输入多点支付密码</string>
    <string name="setup_password_title_second">请再次输入多点支付密码</string>
    <string name="share_cancel">取 消</string>
    <string name="share_qqzone_tv">QQ空间</string>
    <string name="share_result_cancel">取消分享</string>
    <string name="share_result_fail">分享失败</string>
    <string name="share_result_success">分享成功</string>
    <string name="share_weibo_tv">微博</string>
    <string name="share_wx_tv">微信</string>
    <string name="share_wxpy_tv">朋友圈</string>
    <string name="smartgo_manage_finish">完成</string>
    <string name="smartgo_manage_start">管理</string>
    <string name="smartgo_operate_add_cart_format">加入购物车(%1$d)</string>
    <string name="smartgo_operate_delete">删除</string>
    <string name="smartgo_operate_enter_cart">进入购物车</string>
    <string name="smartgo_prebuy_oos">卖光了</string>
    <string name="smartgo_prebuy_understock_format">仅剩%1$d件</string>
    <string name="splash">启动画面</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_delivery_daigou">代购</string>
    <string name="store_delivery_distribution">仅配送</string>
    <string name="store_delivery_none">超出服务范围</string>
    <string name="store_delivery_self">仅自提</string>
    <string name="store_location_laber">[当前]</string>
    <string name="sure_logout">确定退出登录？</string>
    <string name="sys_maintenance">系统维护公告</string>
    <string name="unable_delivery">当前位置不支持配送服务</string>
    <string name="ware_oos">已售罄</string>
    <string name="ware_stock_format">仅剩%1$s件</string>
    <string name="ware_under_carriage">商品已下架</string>
</resources>
