<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingTop="60.0dip" android:paddingBottom="100.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip">
            <TextView android:textSize="@dimen/text_lv18" android:textColor="@color/color_red_ff5000" android:layout_gravity="center_horizontal" android:id="@id/tv_title" android:background="@color/white" android:paddingLeft="@dimen/dialog_title_lr" android:paddingRight="@dimen/dialog_title_lr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/in_sys_maintenance" android:singleLine="true" />
        </FrameLayout>
        <ScrollView android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_weight="1.0" android:overScrollMode="never">
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:gravity="center" android:id="@id/notice_info" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/default_maintenace_info" android:lineSpacingExtra="5.0dip" style="@style/text_normal_graymmm_style" />
                <ImageView android:layout_width="139.0dip" android:layout_height="213.0dip" android:src="@drawable/ic_sys_maintenance" android:scaleType="fitXY" />
            </LinearLayout>
        </ScrollView>
        <Button android:textSize="@dimen/text_lv16" android:textColor="@color/color_red_ff5000" android:id="@id/back_soon_btn" android:background="@drawable/dialog_white_btn_bg_selector" android:layout_width="fill_parent" android:layout_height="@dimen/share_cancel_height" android:layout_margin="10.0dip" android:text="@string/back_soon" />
    </LinearLayout>
</LinearLayout>